--- a/category/gridview/test.css
+++ b/category/gridview/test.css
@@ -41,8 +41,8 @@ flex-direction: column;
     font-size: 12px;
 }
 .rating{
-    font-family: Roboto-Regular;
-color: #757575;
+font-family: Roboto-Regular;
+color: #faca51;
 font-size: 12px;
 }
 
